<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoorFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/entrance_one_cv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/entrance_one_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/entrance"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/lock_one_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/img_1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/entrance_two_cv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/entrance_two_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/exit"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/lock_two_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/img_1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/entrance_three_cv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/entrance_three_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/entrance2"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/lock_three_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/img_1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/video_img"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/intercom"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_img" />

            <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/number_tv"
                app:layout_constraintTop_toBottomOf="@id/number_tv" />

            <ImageView
                android:id="@+id/lock_forth_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/number_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>